# ReflexionOS

./: .arf_config.json  .gitignore  MEMORY.md  README.md  crocodile_habits.md  start-dev.sh  start.sh  test.txt  test_example.py  testes.txt  晴天.txt  设计方案.md
backend/: .env.example  README.md  check_openai_connection.py  conftest.py  pyproject.toml  requirements.txt
backend/.reflexion/: projects.json
backend/app/: app_services.py  config.py  main.py
backend/app/api/: websocket.py  websocket_manager.py
backend/app/config/: settings.py
backend/app/execution/: __init__.py  approval_flow.py  approval_store.py  context_manager.py  initial_plan_bootstrapper.py  loop_message_builder.py  models.py  plan_engine.py  prompt_manager.py  rapid_loop.py  runtime_tool_definitions.py  tool_call_executor.py
backend/app/llm/: __init__.py  base.py  dsml_tool_parser.py  openai_adapter.py  retry.py
backend/app/memory/: __init__.py  context_assembly.py  continuation.py  continuation_builder.py  curated_store.py  message_normalizer.py  payload_utils.py  recall_service.py  text_compaction.py
backend/app/models/: __init__.py  action.py  conversation.py  conversation_snapshot.py  execution.py  llm_config.py  project.py  session.py  session_history.py  transcript.py
backend/app/orchestration/: __init__.py  mcp_manager.py  skill_registry.py
backend/app/security/: command_effect_registry.py  command_policy.py  effect_category.py  path_security.py  shell_security.py
backend/app/services/: __init__.py  agent_service.py  conversation_broadcaster.py  conversation_projection.py  (+6 more)
(+280 files in other folders)
